# cudl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cudl_8h.html  cudl_8h_source.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  globals.html  globals_defs.html  index.html
.github/workflows/: cmake.yml
doc/: CMakeLists.txt  mainpage.dox
examples/: CMakeLists.txt  add_bitwise_not_op_example.c  add_conversion_example.c  add_no_transform_op_example.c  add_no_unit_op_example.c  add_relational_op_example.c  add_unit_example.c  add_unit_with_init_op_example.c
lib/: CMakeLists.txt  cudl.h
search/: all_0.js  all_1.js  defines_0.js  defines_1.js  files_0.js  pages_0.js  searchdata.js
test/: CMakeLists.txt  cudl_float_test.cpp  cudl_integer_test.cpp  cudl_no_prefix_test.cpp  cudl_prefix_test.cpp  cudl_test.cpp
